// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  aria-disabled={false}
  className="item-display orion-fusion-theme"
>
  <div
    className="text"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a default component 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  />
</div>
`;

exports[`should render a disabled display 1`] = `
<div
  aria-disabled={true}
  className="item-display is-disabled"
>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the attention textStyle on text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text attention"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the primary textStyle on text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the secondary textStyle on text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text secondary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the strikeThrough textStyle on text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text strike-through strikeThrough"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the strong textStyle on text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text strong"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render a truncated display 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text is-truncated primary"
    data-terra-clinical-item-display-text={true}
  >
    display1display1display1display1display1display1display1display1
  </div>
</div>
`;

exports[`should render disabled display with text and graphic 1`] = `
<div
  aria-disabled={true}
  className="item-display is-disabled icon-center"
>
  <div
    className="icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render with a graphic 1`] = `
<div
  aria-disabled={false}
  className="item-display icon-center"
>
  <div
    className="icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  />
</div>
`;

exports[`should render with text 1`] = `
<div
  aria-disabled={false}
  className="item-display"
>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render with text and graphic center aligned 1`] = `
<div
  aria-disabled={false}
  className="item-display icon-center"
>
  <div
    className="icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render with text and graphic inline aligned 1`] = `
<div
  aria-disabled={false}
  className="item-display icon-inline"
>
  <div
    className="icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;

exports[`should render with text and graphic top aligned 1`] = `
<div
  aria-disabled={false}
  className="item-display icon-top"
>
  <div
    className="icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text primary"
    data-terra-clinical-item-display-text={true}
  >
    Display
  </div>
</div>
`;
